Caveat paragraph; misc edits

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -337,7 +337,7 @@ location = {},
 keywords = {}}
 
 
-@Report{Kendall2018a,
+@Book{Kendall2018a,
 author = {Kendall, B. E. }, 
 title = {mpmtools: Tools for Building and Analyzing Matrix Population Models}, 
 volume = {}, 
@@ -345,7 +345,7 @@ pages = {},
 editor = {}, 
 edition = {}, 
 publisher = {R package version 0.1.0}, 
-address = {https://github.com/BruceKendall/mpmtools}, 
+address = {}, 
 year = {2018}, 
 abstract = {}, 
 url = {https://github.com/BruceKendall/mpmtools}}
@@ -388,6 +388,47 @@ pages = {11},
 year = {2007}, 
 abstract = {}, 
 doi = {10.18637/jss.v022.i11}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Werner1977,
+author = {Werner, P. A. and Caswell, H. }, 
+title = {{Population growth rates and age versus stage-distribution models for teasel (\textit{Dipsacus sylvestris} Huds.)}}, 
+journal = {Ecology}, 
+volume = {58}, 
+issue = {5}, 
+pages = {1103-1111}, 
+year = {1977}, 
+abstract = {}, 
+doi = {10.2307/1936930}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Ellner2016a,
+author = {Ellner, S. P. and Childs, D. Z. and Rees, M. }, 
+title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Springer International}, 
+address = {Switzerland}, 
+year = {2016}, 
+abstract = {Book Description: This book is a ``How To'' guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
+url = {http://www.amazon.com/Data-driven-Modelling-Structured-Populations-Mathematical/dp/3319288911\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26tag\%3Dsonnysoftware\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D3319288911}}
+
+@Article{Paniw2018,
+author = {Paniw, M. and Ozgul, A. and Salguero-G{\'o}mez, R. }, 
+title = {{Interactive life-history traits predict sensitivity of plants and animals to temporal autocorrelation}}, 
+journal = {Ecol Lett}, 
+volume = {21}, 
+issue = {2}, 
+pages = {275-286}, 
+year = {2018}, 
+abstract = {}, 
+doi = {10.1111/ele.12892}, 
 location = {}, 
 keywords = {}}
 
