--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -217,7 +217,7 @@ par(op)
 
 To get the timestep into the fertility coefficient, $b_x$ needs to be multiplied by a survival term---either that of the parent or of the offspring. 
 Failing to include survival term will inflate the fertility coefficients. 
-For a pre-breeding census model, the fertility coefficient is $F_x = b_x \sigma_0$: the parent, in class $x$, produces $b_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $\sigma_0$ (Fig. \@ref(fig:lifecycles)b). 
+For a prebreeding census model, the fertility coefficient is $F_x = b_x \sigma_0$: the parent, in class $x$, produces $b_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $\sigma_0$ (Fig. \@ref(fig:lifecycles)b). 
 For an annual timestep, $F_x$ represents the number of one-year-olds next year produced by an individual of age $x$ this year. 
 
 In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. 
@@ -351,7 +351,7 @@ If the real stage durations are variable, then the goal is to create a model whe
 @Caswell2001 has a section of his book describing various ways of doing this.
 When the life history contains fixed stage durations, there is no single "best" approach, as the stage-structured model will never match the age-structured model completely.
 Nevertheless, the primary analyses performed on most published MPMs are to calculate the asymptotic growth rate ($\lambda_1$) and the sensitivity of $\lambda_1$ to underlying demographic parameters. 
-For these calculations, there is one (and only one) recipe to create a stage-structured model that will generate the same results as the equivalent age-structured model with fixed stage durations. [LOOK FOR EVIDENCE OF THIS]
+For these calculations, there is one (and only one) recipe to create a stage-structured model that will, for any life history, generate the same results (at least to a very close approximation; we have not found theory on this) as the equivalent age-structured model with fixed stage durations. 
 As best we can tell, it was first introduced by @Caswell1989, although its first application to an ecological population may have been by @Crowder1994. 
 
 ```{r matmodels, results='markup', echo=FALSE}
@@ -393,15 +393,16 @@ Such researchers may be tempted by easier-to-calculate formulas.
 Some discover a predecessor to the above Crowder et al. approach that appears in @Crouse1987 (Table \@ref(tab:matmodels)).
 This formula is complex-looking but straightforward to calculate, as it doesn't require iteration (it incorporates the within-cohort dynamics, but *assumes* that $\lambda_1 = 1$).
 We will refer to this as the "stationary age-within-stage structure" (SAS) model (where "stationary" means that the population is neither growing nor declining).
+Although we have seen no comment on this in the literature, the SAS model seems to be the correct choice when the goal is calculate statistics, such as the reproductive number ($R_0$) that involve following a cohort through the entire life cycle.
 
 An even simpler approach is to say that, if the desired duration of stage $i$ is $T_i$ timesteps, then the fraction maturing is $1/T_i$ [@Caswell2001]. 
 This relationship between the mean residence time (stage duration) and the fraction departing (maturing) is true for a simple Markovian departure process [e.g., @Gallager1995]. 
 However, for the population process, different number of individuals are entering into the stage as a population may be growing or declining and individuals can also die before maturing. 
-Consequently, this particular relationship between the mean duration and fraction maturing is correct under asymptotic conditions if $\sigma_i / \lambda_1 = 1$.
+Consequently, this particular relationship between the mean duration and fraction maturing is correct under asymptotic conditions only if $\sigma_i / \lambda_1 = 1$.
 We will refer to this as the "flat age-within-stage structure" (FAS) model.
 
 A rather different approach to estimating $\gamma_i$ does not explicitly attempt to match the mean stage duration, but instead merely estimates $\gamma_i$ as the observed fraction of surviving individuals in the stage that mature to the next stage.
-This repeated observations of marked individuals, and might make use of tools such as multistate capture-mark-recapture models (CITE).
+This requires repeated observations of marked individuals, and might make use of tools such as multistate capture-mark-recapture models (CITE).
 As long as the modeled age-within-stage distribution remains the same as it was during the observation period, then the model will get the mean stage duration correct.
 However, whereas the observed fraction maturing will change as the age-within-stage distribution changes in the actual population, changes in the modeled age-within-stage distribution will not be reflected in changing maturation fraction.
 We will refer to this as the "observed age-within-stage structure" (OAS) model.
@@ -698,7 +699,7 @@ Second, incorrect specification of the maturation rate seems to have the largest
 Third, even a stage-structured model that correctly matches the mean time to maturity gives incorrect transient dynamics and generation time if the age at maturation is actually fixed.
 Finally, most (but not all) of these errors are larger if $\lambda_1$ is far from one.
 However, in many cases we cannot yet predict either the direction or magnitude of biases introduced by the MPM construction errors.
-While a more complete understanding of these biases might be derived by analyzining more models, spanning a range of life histories, ecological understanding and management decisions would be better served by constructing the models correctly in the first place.
+While a more complete understanding of these biases might be derived by analyzing more models, spanning a range of life histories, ecological understanding and management decisions would be better served by constructing the models correctly in the first place.
 
 Why do these errors occur? 
 The specific errors probably have different sources, but our experience working with students and non-modelers suggests that some confusion arises from inconsistent terminology and notation, and a lack of clear guidance on maturation rates.
@@ -718,12 +719,12 @@ Second, the visual similarity between the conceptual life cycle graph (Figs. \@r
 Finally, many nonmodellers seem to struggle to grasp the importance of having every transition in the MPM represent the same timestep.
 This may be a threshold concept, although students find it more to be unnecessary rather than counter-intuitive.
 
-The failure to include reproduction when an individual first matures, which is solely found in postbreeding census models, is related to a true threshold concept: the counter-intuitive need to assign postive fertility coefficients to some juveniles.
+The failure to include reproduction when an individual first matures, which is solely found in postbreeding census models, is related to a true threshold concept: the counter-intuitive need to assign positive fertility coefficients to some juveniles.
 This is probably exacerbated by the fact that most textbooks devote the most thorough explanation of MPM construction to age-structured models (where the confusing nature of postbreeding census models can be hidden by labeling an individuals age class as its age at its *next* birthday).
 However, when these textbooks move to a (usually much briefer) description of stage-structured models, where this solution does not work, they generally switch notation without comment [a notable exception is @Mills2007, who calls newborns "$N_{\text{zero}}$" for all models, and provides a very clear graphical depiction of both age-structured and stage-structured models].
 
 The poor choice of maturation model is probably most easily understood.
-Most textbooks do not treat this issue, and those that do [e.g., @Caswell2001; @Ebert1998] tend to be more mathematical than many nonmodelers may be comfortable with. 
+Most textbooks do not treat this issue, and those that do [e.g., @Caswell2001; @Ebert1998] tend to be more mathematical than many nonmodellers may be comfortable with. 
 Furthermore, they do not include clear guidance on which approach is most suitable for a given modeling objective.
 
 How can the prevalence of these errors in MPM construction be reduced in the future?
@@ -741,9 +742,9 @@ Experts can also help, by developing handbooks and training materials that are b
 The comprehensiveness requires, in part, a thorough treatment of stage-structured models (which are not described as completely as age-structured models in many texts), as well as a comprehensive discussion of the consequences of various choices of when the census should occur in the model.
 The clarity certainly requires clear and consistent notation and terminology, as well as attention to the knowledge level of the audience, but that will probably not be sufficient.
 Educational research suggests that when students arrive with misconceptions, clear and accessible expositions of correct principles do not lead to learning, as the students do not pay sufficient attention to recognize the difference between the exposition and their prior belief; better learning occurs when they are first presented with the misconception and then led to an understanding of why it is wrong [@Muller2008; @Muller2008a].
-The biologically-based intuitions that underly incorrect formulations of MPMs may have the strength of scientific misconceptions, in which case the training material will need to actively uproot them before a better understanding of the model requirements can be learned.
+The biologically-based intuitions that underlay incorrect formulations of MPMs may have the strength of scientific misconceptions, in which case the training material will need to actively uproot them before a better understanding of the model requirements can be learned.
 
-Experts must also address the fact that many creators of animal MPMs are not comfortable with even the simple programmng required to calculate quantities like the AAS development coefficient.
+Experts must also address the fact that many creators of animal MPMs are not comfortable with even the simple programming required to calculate quantities like the AAS development coefficient.
 While there are tools for easing the *analysis* an MPM once the matrix has been constructed [e.g., @Stubben2007], little is available to help non-programmers *construct* complex MPMs.
 A set of such tools, in a software environment with which many ecologists are familiar, such as R, would be helpful, especially in connection with a tutorial.
 
@@ -752,11 +753,11 @@ However, other problematic errors may occur.
 For example, nearly all animal MPMs are presented as birth-pulse models, but in some cases reproduction is continuous over all or a significant fraction of the model timestep.
 The lionfish model analyzed here illustrates this: lionfish are described as laying a batch of eggs every 3 days, but by building a birth-pulse model with a one-month timestep, @Morris2011 fail to account for the fact that the total monthly egg production is reduced by parental mortality during the timestep, or by the fact that age classes comprise a range of ages.
 Both of these issues are addressed by formulas for birth-flow models.
-Another challenge arises when demography is heterogeneous within a stage class, as when individuals grow continuously through life and survial and birth rates are size dependent.
-@Fujiwara2017 have studied this and provide new recommendations for how best to calculate "average" demographic rates within a heterogenous stage class.
+Another challenge arises when demography is heterogeneous within a stage class, as when individuals grow continuously through life and survival and birth rates are size dependent.
+@Fujiwara2017 have studied this and provide new recommendations for how best to calculate "average" demographic rates within a heterogeneous stage class.
 
 Plant MPMs, while prone to qualitatively similar types of errors, differ in detail.
-In almost all cases, "newborns" are seeds; in many species, newly produced seeds have the potential to transition to two qualitativly different stages (seedlings and seed bank) in the following timestep.
+In almost all cases, "newborns" are seeds; in many species, newly produced seeds have the potential to transition to two qualitatively different stages (seedlings and seed bank) in the following timestep.
 If the fertility coefficient has seed production without subsequent seed survival (and potential germination) then this creates the same error as we have described here.
 @Caswell2001, in correcting his earlier teasel model [@Werner1977] illustrates this issue; but he focuses not on the missing survival term but on the fact that the error "introduced an unrealistic delay of 1 year in the process of reproduction."
 In our experience, it is often difficult to determine whether a plant MPM has made this error, as the minimum time to germination is usually not described in the publication.
@@ -764,12 +765,12 @@ Most plant MPMs have at least some classes that are defined by size rather than 
 This creates a couple of challenges.
 First, an individual in a given size class can often transition to multiple other size classes, skipping a size class or even shrinking.
 In a postbreeding census model, this creates the need for complex fertility coefficients with a component for each of those transitions.
-In addition, transition rates between size classes are usually estimated from the observed number of transitions; but the latter depend on the distributions of size within each size class (analagous to the distribution of age within stage discussed in the current paper), which in turn depend on the recent history of population fluctuations.
-The general solution for the latter problem is to avoid size classes altogether and instead use an integral projection model [@Ellner2016a]; but the creation of IPMs requires some programming skill.
+In addition, transition rates between size classes are usually estimated from the observed number of transitions; but the latter depend on the distributions of size within each size class (analogous to the distribution of age within stage discussed in the current paper), which in turn depend on the recent history of population fluctuations.
+The general solution for the latter problem is to avoid discrete size classes altogether and instead use an integral projection model [@Ellner2016a]; but the creation of IPMs requires some programming skill.
 
-F.  Revisiting prior results
-    1. Individual studies
-    2. Syntheses
+In conclusion, we have found that errors in constructing animal population models are widespread, that these errors can have substantial quantitative (e.g., mis-estimation of the asymptotic growth rate, $\lambda_1$) and qualitative (e.g., mis-ranking the elasticity of $\lambda_1$ to various vital rates) consequences for the conclusions reached by the MPM analysis.
+In cases where scientific results or management decisions are affected by these conclusions, updating and re-analyzing the models would be valuable.
+Furthermore, comparative studies that use the COMADRE database to obtain a "representative sample" of animal demography [e.g., @Paniw2018] will be subject to extra "noise" (that may bias parameter estimates) unless erroneous models are corrected or excluded from the analysis.
 
 **Misc discussion items**
 
