--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -345,10 +345,10 @@ pages = {},
 editor = {}, 
 edition = {}, 
 publisher = {R package version 0.1.0}, 
-address = {}, 
+address = {https://github.com/BruceKendall/mpmtools}, 
 year = {2018}, 
 abstract = {}, 
-url = {https://github.com/BruceKendall/mpmtools}}
+url = {}}
 
 @Article{Muller2008a,
 author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
@@ -429,6 +429,20 @@ pages = {275-286},
 year = {2018}, 
 abstract = {}, 
 doi = {10.1111/ele.12892}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Fujiwara2001a,
+author = {Fujiwara, M. and Caswell, H. }, 
+title = {{Demography of the endangered North Atlantic right whale}}, 
+journal = {Nature}, 
+volume = {414}, 
+issue = {}, 
+pages = {537-541}, 
+year = {2001}, 
+abstract = {}, 
+doi = {}, 
 location = {}, 
 keywords = {}}
 
